[tool.poetry]
name = "rl-agent"
version = "0.1.0"
description = ""
authors = ["alexwerben <crystall.werben@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.67.0"
wheel = "^0.45.0"
setuptools = "^75.3.0"
pygame = "^2.6.1"
gymnasium = {extras = ["toy-text"], version = "^1.0.0"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
